# cpp_lesson

./: .gitignore  CMakeLists.txt  LICENSE  clone_SDL.bat  clone_SDL.sh
src/: main.cpp
